log/build_2026-01-09_15-06-06/rbq_patrol/stderr.log
  File "/home/dev/gps_setting_ws/install/rbq_patrol/lib/python3.10/site-packages/trajectory/receiver.py", line 77
    if !self.gnss_fix_ok: return False
       ^
SyntaxError: invalid syntax

